# ClassicLauncher

./: .clang-format  .gitignore  CMakeLists.txt  ClassicLauncher.uproject  README.md  Setup.bat
.github/workflows/: build-windows.yml  cmake-single-platform.yml
Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini  DefaultGameplayTags.ini  DefaultInput.ini  configsys - Copia.xml
Config/Localization/: Game_Gather.ini
Content/: BPI_Frame.uasset  InterfaceTeste.uasset  MyInputAction.uasset  NewBlueprint.uasset  NewCurveBase.uasset  NewInputMappingContext.uasset  NewPaperSprite.uasset  NewStreamMediaSource.uasset  Screenshot_2024-01-03_082423.uasset  Sprite-0001.uasset  bar_reference.uasset  nes.uasset  test.uasset  teste-export.uasset  teste.uasset
Content/Blueprint/: BP_ClassicFunctionLibrary.uasset  BP_ClassicGameInstance.uasset  BP_ClassicGameMode.uasset  BP_ClassicGameMode_Debug.uasset  BP_ClassicMacroLibrary.uasset  BP_ClassicMediaPlayer.uasset  BP_ClassicSaveGame.uasset  BP_Classic_Libretro_TV.uasset  BP_Classic_Player.uasset  BP_Controller.uasset  BP_Effects.uasset  BP_LibretroTVActor.uasset  BP_Music.uasset  BP_Themes.uasset  BP_Video.uasset  ClassicGameMode.uasset  ClassicHUD.uasset  NewMacroLibrary.uasset  UIAnimation.uasset
Content/Blueprint/Audio/: BP_ClassicMediaPlayer.uasset
Content/Blueprint/Core/: BP_ClassicGameInstance.uasset  BP_ClassicGameMode.uasset  BP_ClassicSaveGame.uasset  BP_DebugClassicGameMode.uasset
Content/Curves/: Favorite_Curve_Foward.uasset  Favorite_Curve_Reverse.uasset  ToUp_Curve.uasset
Content/Localization/: ST_Translation.uasset
Content/Localization/Game/: Game.csv  Game.manifest
Content/ProceduralTextures/: TextureTheme.uasset  TextureTheme_Sprite1.uasset  TextureTheme_Sprite2.uasset  TextureTheme_Sprite4.uasset
Content/Tables/: ST_Translation.uasset
Content/Widgets/: WBP_Configurations.uasset  WBP_DeviceInfo.uasset  WBP_FolderDialog.uasset  WBP_Footer_Details.uasset  WBP_Info_Interface.uasset  WBP_LicenseInfo.uasset  WBP_LoadingInterface.uasset  WBP_Main_Interface.uasset  WBP_Modal.uasset  WBP_Systems_list.uasset  WBP_teste.uasset  datateste.uasset
Content/maps/: map.umap
Content/materials/: MP_Effect.uasset  MP_Music.uasset  MP_Video.uasset  MT_Video.uasset  M_Black_Screen.uasset  M_ClassicGlowingScreen.uasset  T_Video.uasset  T_Video_Inst.uasset
Content/meshs/: Plane.uasset
Content/resources/: ClassicLauncher.uasset  accept.uasset  file.uasset  folder.uasset  loading.uasset  null.uasset  pc.uasset  pixel.uasset  scrollbar.uasset  turnleft.uasset
Content/sounds/: MasterVolumeClass.uasset  MasterVolumeMix.uasset  MusicVolumeClass.uasset  VideoVolumeClass.uasset  navigate.uasset  select.uasset
Content/textures/: MP_Effect.uasset  MP_Music.uasset  MP_Video.uasset  MT_Video.uasset  Scale2D.uasset  T_IconsUI.uasset  T_Letters.uasset  Translation2D.uasset  null.uasset  reference2.uasset
Content/themes/: 1P.uasset  2P.uasset  3P.uasset  4+P.uasset  4P.uasset  Scrollbar.uasset  arrow-1-alt.uasset  arrow-1.uasset  arrow-2-alt.uasset  arrow-2.uasset  arrow-3-alt.uasset  arrow-3.uasset  arrow-cursor.uasset  arrow-outline.uasset  bg-bt-2.uasset  bg-bt-3.uasset  bg-bt-alt-2.uasset  bg-bt-alt.uasset  bg-bt.uasset  bg-cursor-alt.uasset  bg-cursor.uasset  bt-accept.uasset  bt-back.uasset  bt-down.uasset  bt-favorites.uasset  bt-right-left.uasset  bt-up-down.uasset  bt-up.uasset  button-focus.uasset  button.uasset  card-background-favorite.uasset  card-background-selected.uasset  card-background.uasset  card-frame-mini.uasset  card-frame-system.uasset  card-frame.uasset  card-main-favorite.uasset  card-main-selected-system.uasset  card-main-selected.uasset  card-main-system.uasset  (+25 more)
RayLib/ClassicLauncher/: ClassicLauncher.aps  ClassicLauncher.rc  ClassicLauncher.sln  ClassicLauncher.vcxproj  ClassicLauncher.vcxproj.filters  packages.config  resource.h
Source/: Application.cpp  Application.h  Assert.h  ClassicAssert.h  ClassicLauncher.Target.cs  ClassicLauncher.h  ClassicLauncher.rc  ClassicLauncherEditor.Target.cs  Core.h  GuiComponent.cpp  GuiComponent.h  Main.cpp
Source/Animations/: Animation.cpp  Animation.h
Source/Audio/: AudioManager.cpp  AudioManager.h
Source/ClassicLauncher/: ClassicLauncher.Build.cs  ClassicLauncher.cpp
Source/Components/: FocusComponent.cpp  FocusComponent.h  FocusManager.cpp  FocusManager.h
Source/Data/: Color.h  DateTime.cpp  DateTime.h  GameListManager.cpp  GameListManager.h  Rectangle.h  RectangleEx.h  Size.h  Transform.cpp  Transform.h  TransformProperties.h  Vector2.h  Vector2Ex.h
Source/Edit/: AnimationFrame.cpp  Card.cpp  Card.h  Date.h  Engine.cpp  Engine.h  GameListManager.cpp  GameListManager.h  Object.h  ObjectAnimated.cpp  ObjectAnimated.h  ObjectManager.h  Process.h  VideoPlayer.h
Source/Entity/: Entity.cpp  Entity.h  EntityGui.cpp  EntityGui.h  EntityManager.cpp  EntityManager.h
Source/Graphics/: Render.cpp  Render.h  RenderSystem.cpp  RenderSystem.h  Sprite.cpp  Sprite.h  SpriteAnimator.h  SpriteManager.cpp  SpriteManager.h
Source/Guis/: GuiBlackScreen.cpp  GuiBlackScreen.h  GuiCard.cpp  GuiCard.h  GuiComponent.cpp  GuiComponent.h  GuiFrame.cpp  GuiFrame.h  GuiGrid.cpp  GuiGrid.h  GuiHorizontalBox.cpp  GuiHorizontalBox.h  GuiHorizontalCards.cpp  GuiHorizontalCards.h  GuiMiniCover.cpp  GuiMiniCover.h  GuiSizeBox.cpp  GuiSizeBox.h  GuiTextBlock.cpp  GuiTextBlock.h  GuiTextBox.cpp  GuiTextBox.h  GuiVideoPlayer.cpp  GuiVideoPlayer.h  GuiWindow.cpp  GuiWindow.h
Source/Input/: InputManager.cpp  InputManager.h
Source/Themes/: Themes.cpp  Themes.h
Source/Utils/: ConfigurationManager.cpp  ConfigurationManager.h  Core.h  Log.cpp  Log.h  Math.h  Print.cpp  Print.h  Process.cpp  Process.h  ProcessManager.cpp  ProcessManager.h  Resouces.h  Resources.cpp  Resources.h  SimpleIni.cpp  SimpleIni.h  StringFunctionLibrary.cpp  StringFunctionLibrary.h  ThreadManager.h  Timer.cpp  Timer.h  TimerManager.cpp  TimerManager.h  UtilsFunctionLibrary.cpp  UtilsFunctionLibrary.h
Source/Video/: VideoPlayer.cpp  VideoPlayer.h
scripts/: build.py  configure.py  configureWin.py
(+316 files in other folders)
